Add browser testing and kahlan startup

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
             "email": "benni@kobrakai.de"
         }
     ],
-    "require": {},
+    "require": {
+        "behat/mink": "^1.7",
+        "behat/mink-zombie-driver": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "LostKobrakai\\TestHelpers\\": "src/"
