Try to make only the zombie driver install in dev stability

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "behat/mink": "^1.7",
-        "behat/mink-zombie-driver": "dev-master"
+        "behat/mink-zombie-driver": "dev-master@dev"
     },
     "autoload": {
         "psr-4": {
